--- a/rn-hws3/package.json
+++ b/rn-hws3/package.json
@@ -20,7 +20,10 @@
     "react-native": "0.73.4",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-svg": "^14.1.0",
+    "react-native-web": "~0.19.6",
+    "expo-checkbox": "~2.7.0",
+    "@react-native-community/datetimepicker": "7.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
